--- a/templates/commons/info.html
+++ b/templates/commons/info.html
@@ -100,13 +100,13 @@
         {% if library == "False" %}
         <div id="info-search">
             <div class="d-flex justify-content-center mt-5">
-                <div class="text-style-ro-40b px-5" style="color: white; background-color: #ED1C24; border-radius: 20px;">HOW TO USE SEARCH?</div>
+                <div class="text-style-ro-30b px-5" style="color: white; background-color: #ED1C24; border-radius: 20px;">HOW TO USE SEARCH?</div>
             </div>
             <div class="col-12 px-5" style="width: 100%;">
                 <div class="col-12 mt-5 pt-5" style="border: 3px solid #FF6B2C; border-radius: 20px;">
                     <!-- How to use search 1 -->
-                    <div class="d-flex justify-content-center">
-                        <div class="col-10 d-flex justify-content-center">
+                    <div class="d-flex justify-content-center pb-3">
+                        <div class="col-10 d-flex justify-content-center info-search-div-one">
                             <div class="info-images-div d-flex justify-content-between px-2">
                                 <div class="ps-5"><img class="img-fluid" style="width: 60%;" src="{% static 'images/side_menu1.png' %}"></div>
                                 <div class="pe-5">
@@ -126,14 +126,14 @@
                     <!-- Scroll button -->
                     <div class="d-flex justify-content-center mt-5"><img class="img-fluid" src="{% static 'images/scroll_button.png' %}"></div>
                     <!-- How to use search 2 -->
-                    <div class="d-flex justify-content-center">
+                    <div class="d-flex justify-content-center pt-3 pb-3">
                         <div class="col-11 d-flex justify-content-center">
                             <div class="info-images-div col-12 d-flex mt-5">
                                 <div class="col-5 text-center">
                                     <div class="text-style-ro-20b">POSITION</div>
                                     <div class="ps-4 mt-3"><img class="img-fluid" style="width: 70%;" src="{% static 'images/position_one.png' %}"></div>
                                 </div>
-                                <div class="col-7 pe-5">
+                                <div class="col-7 pe-5 info-search-div-two">
                                     <div class="text-style-ro-20b ps-5">SELECT DESIRED CATEGORIES</div>
                                     <div class="text-style-ro-16 mt-3 ps-5">
                                         <ul>
@@ -148,7 +148,7 @@
                                         </ul>
                                     </div>
                                     <div class="d-flex justify-content-center">
-                                        <img class="img-fluid" src="{% static 'images/programming_rafiki.png' %}">
+                                        <img class="img-fluid" style="width: 70%;" src="{% static 'images/programming_rafiki.png' %}">
                                     </div>
                                 </div>
                             </div>
@@ -157,18 +157,18 @@
                     <!-- Scroll button -->
                     <div class="d-flex justify-content-center mt-5"><img class="img-fluid" src="{% static 'images/scroll_button.png' %}"></div>
                     <!-- How to use search 3 -->
-                    <div class="d-flex justify-content-center">
+                    <div class="d-flex justify-content-center pt-3 pb-3">
                         <div class="col-10 d-flex justify-content-center">
                             <div class="col-12 mt-5">
                                 <div class="row d-flex">
                                     <div class="col-7 ps-3">
                                         <div class="d-flex justify-content-center">
-                                            <img class="img-fluid" style="width: 90%;" src="{% static 'images/software_tester_rafiki.png' %}">
+                                            <img class="img-fluid info-search-div-three-image-one" style="width: 80%;" src="{% static 'images/software_tester_rafiki.png' %}">
                                         </div>
                                     </div>
                                     <div class="col-5 text-center">
                                         <div class="text-style-ro-20b pe-4">POSITION</div>
-                                        <div class="pe-4 mt-3"><img class="img-fluid" style="width: 80%;" src="{% static 'images/position_and_search.png' %}"></div>
+                                        <div class="pe-4 mt-3"><img class="img-fluid info-search-div-three-image-two" style="width: 70%;" src="{% static 'images/position_and_search.png' %}"></div>
                                     </div> 
                                 </div>
                                 <div class="d-flex justify-content-center mt-5">
@@ -189,9 +189,9 @@
                     <!-- Scroll button -->
                     <div class="d-flex justify-content-center mt-5"><img class="img-fluid" src="{% static 'images/scroll_button.png' %}"></div>
                     <!-- How to use search 4 -->
-                    <div class="d-flex justify-content-center mt-1">
+                    <div class="d-flex justify-content-center mt-1 pt-3 pb-3">
                         <div class="col-12 mt-5">
-                            <div class="d-flex justify-content-center "><img class="img-fluid" style="width: 30%;" src="{% static 'images/filter.png' %}"></div>
+                            <div class="d-flex justify-content-center "><img class="img-fluid" style="width: 25%;" src="{% static 'images/filter.png' %}"></div>
                             <div class="d-flex justify-content-center mt-4">
                                 <div class="col-8">
                                     <div class="text-style-ro-20b ps-2">FILTER SEARCH LIST</div>
@@ -210,9 +210,9 @@
                     <!-- Scroll button -->
                     <div class="d-flex justify-content-center mt-5"><img class="img-fluid" src="{% static 'images/scroll_button.png' %}"></div>
                     <!-- How to use search 5 -->
-                    <div class="d-flex justify-content-center">
+                    <div class="d-flex justify-content-center pt-3 pb-3">
                         <div class="info-images-div col-12 mt-5 px-4" id="info-images-div">
-                            <div class="d-flex justify-content-center text-style-ro-30b">FILTER SEARCH CATEGORIES</div>
+                            <div class="d-flex justify-content-center text-style-ro-30b pb-2 filter-search-categories-div">FILTER SEARCH CATEGORIES</div>
                             <div class="d-flex justify-content-center mt-4">
                                 <div class="col-10 white-box d-flex align-items-center py-3">
                                     <div class="text-style-ro-20b ps-3 pe-3">POSITION</div>
@@ -261,7 +261,7 @@
                     <div class="d-flex justify-content-center mt-5"><img class="img-fluid" src="{% static 'images/scroll_button.png' %}"></div>
                     <!-- How to use search 6 -->
                     <div class="d-flex justify-content-center">
-                        <div class="col-10 info-search-6-div">
+                        <div class="col-10 info_search_div_six">
                             <div class="position-relative" style="width: 100%;">
                                 <img class="img-fluid" src="{% static 'images/student_select.png' %}" style="width: 100%;">
                                 <div class="position-absolute select-student-image-div">
@@ -300,7 +300,7 @@
                     </div>
                     <!-- Go to library button -->
                     <div class="d-flex justify-content-center mt-5 mb-5" id="go-to-library">
-                        <div id="library-button" class="col-9 text-style-ro-40b d-flex py-1" style="color: white; background-color: #ED1C24; border-radius: 25px;">
+                        <div id="library-button" class="col-9 text-style-ro-30b d-flex py-1" style="color: white; background-color: #ED1C24; border-radius: 25px;">
                             <div class="col-11 d-flex justify-content-center align-items-center">GO TO LIBRARY TUTORIAL</div>
                             <div class="col-1 pe-3 d-flex justify-content-end align-items-center"><i class="fa-solid fa-circle-chevron-right"></i></div>
                         </div>
@@ -312,13 +312,13 @@
          <!-- How to use library - info -->
         <div id="info-library">
             <div class="d-flex justify-content-center mt-5">
-                <div class="text-style-ro-40b px-5" style="color: white; background-color: #ED1C24; border-radius: 20px;">HOW TO USE LIBRARY?</div>
+                <div class="text-style-ro-30b px-5" style="color: white; background-color: #ED1C24; border-radius: 20px;">HOW TO USE LIBRARY?</div>
             </div>
             <div class="col-12 px-5" style="width: 100%;">
                 <div class="col-12 mt-5 pt-5" style="border: 3px solid #FF6B2C; border-radius: 20px;">
                     <!-- How to use library 1 -->
-                    <div class="d-flex justify-content-center">
-                        <div class="col-10 d-flex px-5">
+                    <div class="d-flex justify-content-center pt-2">
+                        <div class="col-10 d-flex justify-content-center px-5">
                             <div class="ps-5"><img class="img-fluid" style="width: 70%;" src="{% static 'images/library_side_menu.png' %}"></div>
                             <div class="pe-5">
                                 <div class="text-style-ro-20b">SELECT LIBRARY TAB</div>
@@ -344,14 +344,14 @@
                                     </ul>
                                 </div>
                             </div>
-                            <div class="d-flex justify-content-between pt-3">
+                            <div class="d-flex justify-content-between pt-3 col-12">
                                 <div class="ps-5">
                                     <div class="text-style-lato-20b d-flex align-items-center px-4 py-2" style="background-image: linear-gradient(to right, #ED1C24 , #FF6B2C); border-radius: 10px; color: white;">
                                         <span id="saved-item">SAVED  &nbsp; | &nbsp; 23</span>
                                         <span id="connected-item" class="ps-4">CONNECTED &nbsp; | &nbsp; 6</span>
                                     </div>
                                 </div>
-                                <div class="pe-2 data-points-img"><img class="img-fluid" style="width: 90%;" src="{% static 'images/data_points.png' %}"></div>
+                                <div class="pe-2 data-points-img col-6"><img class="img-fluid" style="width: 90%;" src="{% static 'images/data_points.png' %}"></div>
                             </div>
                         </div>
                     </div>
