--- a/templates/commons/info.html
+++ b/templates/commons/info.html
@@ -335,7 +335,7 @@
                     <div class="d-flex justify-content-center mt-5"><img class="img-fluid" src="{% static 'images/scroll_button.png' %}"></div>
                     <!-- How to use library 2 -->
                     <div class="info-library d-flex justify-content-center mt-5">
-                        <div class="col-10 px-1">
+                        <div class="info-library-div-two col-10 px-1">
                             <div class="col-9">
                                 <div class="text-style-ro-20b ps-5">STATUS IN LIBRARY</div>
                                 <div class="text-style-ro-16 ps-5 pe-5 mt-2">
@@ -361,8 +361,8 @@
                     <div class="d-flex justify-content-center mt-5">
                         <div class="col-9">
                             <div class="d-flex align-items-center">
-                                <div class="col-6 d-flex justify-content-center"><img class="img-fluid" style="width: 100%;" src="{% static 'images/user_research.png' %}"></div>
-                                <div class="col-6 d-flex justify-content-center"><img class="img-fluid" style="width: 60%;" src="{% static 'images/connect_button.png' %}"></div>
+                                <div class="col-6 d-flex justify-content-center"><img class="img-fluid info-lib-div-three-image-one" style="" src="{% static 'images/user_research.png' %}"></div>
+                                <div class="col-6 d-flex justify-content-center"><img class="img-fluid info-lib-div-three-image-two" style="" src="{% static 'images/connect_button.png' %}"></div>
                             </div>
                             <div class="d-flex justify-content-center">
                                 <div class="col-9">
@@ -381,7 +381,7 @@
                     <!-- How to use library 4 -->
                     <div class="d-flex justify-content-center mt-5">
                         <div class="col-10">
-                            <div class="d-flex justify-content-center"><img class="img-fluid" style="width: 50%;" src="{% static 'images/people_search.png' %}"></div>
+                            <div class="d-flex justify-content-center"><img class="img-fluid info-lib-div-four-image-one" style="" src="{% static 'images/people_search.png' %}"></div>
                             <div class="d-flex justify-content-center mt-4">
                                 <div class="">
                                     <div class="text-style-ro-20b">REMOVING CONTACT FROM LIBRARY</div>
@@ -393,7 +393,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="d-flex justify-content-center mt-4"><img class="img-fluid" style="width: 25%;" src="{% static 'images/remove_button.png' %}"></div>
+                            <div class="d-flex justify-content-center mt-4"><img class="img-fluid info-lib-div-four-image-two" style="" src="{% static 'images/remove_button.png' %}"></div>
                         </div>
                     </div>
                     <!-- Scroll button -->
@@ -402,7 +402,7 @@
                     <div class="d-flex justify-content-center mt-5 mb-5">
                         <div class="col-9">
                             <div class="d-flex justify-content-center">
-                                <img class="img-fluid" style="width: 65%;" src="{% static 'images/more_coming_soon.png' %}">
+                                <img class="img-fluid more-coming-soon-img" style="" src="{% static 'images/more_coming_soon.png' %}">
                             </div>
                         </div>
                     </div>
